UI fixes,  button colors, spacing and alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2478,7 +2478,7 @@ progress {
 .form-control {
   display: block;
   width: 100%;
-  padding: 0.375rem 0rem;
+  padding: 0.375rem 0.75rem;
   
   font-size: 1rem;
   font-weight: 400;
@@ -4893,8 +4893,8 @@ textarea.form-control-lg {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #357a75;
+  border-color: #198754;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
